crates/keron-lang/tests/corpus/errors/check/struct_unknown_field.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: unknown field `z` on struct `Point`
  --> 5:16
  |
5 | val z: Int = p.z
  |                ^
